--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,16 @@
 APP_NAME="massive-music-test"
-ENVIRONMENT=development
+ENVIRONMENT="development"
 HOST=127.0.0.1
 PORT=8080
 
 POSTGRESQL_HOST=127.0.0.1
 POSTGRESQL_PORT=5432
-POSTGRESQL_USER=admin
-POSTGRESQL_PASSWORD=12345678
-POSTGRESQL_DATABASE=massive_mussic_user
+POSTGRESQL_USER="admin"
+POSTGRESQL_PASSWORD="12345678"
+POSTGRESQL_DATABASE="massive_mussic_user"
+
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+REDIS_PASSWORD=""
 
 JWT_SECRET=qweasdzxc
